--- a/index.html
+++ b/index.html
@@ -6,9 +6,9 @@
 <body>
 
   <script src="https://unpkg.com/@ruffle-rs/ruffle"></script>
-  <object width="800" height="600">
-<param name="movie" value="https://redrcknrbn.github.io/StrikeForceHeroes2/strike-force-heroes-2.swf">
-<embed src="https://redrcknrbn.github.io/StrikeForceHeroes2/strike-force-heroes-2.swf" width="800" height="600">
+  <object width="800" height="620">
+<param name="movie" value="bloons-td-5-178395d58.swf">
+<embed src="bloons-td-5-178395d58.swf" width="800" height="620">
 </embed>
   </object>
   
